# chembasics

./: .gitignore  Cargo.toml  README.md  build.rs
src/: basic_formulas.rs  consts.rs  ion.rs  isotope.rs  lib.rs
src/ra/: mod.rs  scene.rs  vp.rs
src/structural/: cml.rs  mod.rs  nomenclature.rs  smiles.rs
src/structural/mol/: mod.rs  v2000.rs  v3000.rs
