[package]
name = "chembasics"
version = "0.1.2"
authors = ["andres"]
edition = "2018"
build = "build.rs"
description = "Things for chemistry"
categories = ["science"]
keywords = ["chemistry", "chemical", "smiles", "molecules", "formulas"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/chembasics/"
homepage = "https://crates.io/crates/chembasics"
repository = "https://github.com/sandmor/chembasics"

[dependencies]
ptable = {package = "periodic-table-on-an-enum", version = "0.3"}
image = "0"
rayon = "1"
xml-rs = "0.8"
fnv = "1"
[build-dependencies]
ptable  = {package = "periodic-table-on-an-enum", version = "0.3"}
[dev-dependencies]
glutin = "0"
gl = "0"
